# game_tebak_kata_bahasa_indonesia_hangman

./: .gitignore  AI_USAGE_LOG.md  AUDIT_REPORT.md  CHANGELOG.md  CHECKSUMS.sha256  HASIL_TEST.txt  QUALITY_REPORT.md  README.md  TEST_PLAN.md  main.py  pyproject.toml  run_game.bat  run_game.sh  run_tests.bat  run_tests.sh
data/: bank_kata.json
docs/: ARCHITECTURE.md  COLAB_TEST_REPORT.md  DATASET.md  MANUAL_TEST_REPORT.md  SECURITY.md
evidence/colab/: HASIL_TEST_GOOGLE_COLAB.txt  PENGUJIAN_GOOGLE_COLAB.ipynb  README.md
evidence/manual_test/: README.md
game/: __init__.py  application.py  config.py  data_manager.py  exceptions.py  hangman.py  leaderboard.py  types.py  ui.py  validation.py
tests/: test_application.py  test_data_manager.py  test_hangman.py  test_leaderboard.py  test_main.py  test_release.py  test_ui.py  test_validate_tool.py  test_validation.py
tools/: validate_bank.py
